    the first character entered.  Entering characters in lowercase still
    selects files, as before.

  * Fixed bug when starting ROMs via MacOS finder.

  * Added various developer options for oddball TIAs:
    - stuffed player, missiles and ball move
    - delayed playfield bits and color
    - delayed players and ball VDEL swap

  * Disabled some developer options for 'Player settings'.

  * Improved breakpoints to now consider the banks.

  * Improved debugger's TIA display and zoom windows.

  * Improved hotkeys, now many emulation keys work in debugger too.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Reworked ROM properties database, making it load faster in certain
    cases.  Related to this, completely removed 'Display_Height' stuff.
    (TODO: Stella.pro cleanup, doc).

  * Updated internal ROM properties database to ROM-Hunter version 15
    (thanks go to RomHunter for his tireless research in this area).
    Related to this, updated the snapshot collection.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

  * Fixed cheatcode handling in 2K and 4K ROMs.

  * Fixed bug where frying one ROM was continued with the next ROM.

  * Fixed not working 7800 pause key.

  * Enhanced UA bankswitching to support certain Brazilian carts.

  * Auto-detection of bankswitch scheme by file extension now includes
    more human-readable formats (not restricted to DOS 3-char length).
    See the documentation for the new names.

  * Fixed bug in DPC+ scheme; 'fast fetch mode' was enabled at startup,
    when it should be disabled by default.

  * Fixed display for OpenGLES renderers used by Libretro
    - and much more for Libretro support (TODO)

  * PNG/ZIP image support is now conditionally compiled into Stella.
    All major ports (Linux/macOS/Windows) have it enabled by default.

  * SDL/GUI support is now conditionally compiled into Stella.  All major